--- a/index.html
+++ b/index.html
@@ -4,44 +4,44 @@
         <meta name="viewport" content="width=device-width, user-scalable=no ,initial-scale=1.0, maximum-scale=1.0,minimum-sacale=1.0">
         <title>Inicio</title>
         <link rel="stylesheet" href="style.css">
+        <script data-ad-client="pub-9661846799111855" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
     <body>
         <header>
-            <div class="container">
-                <nav>
-                    <a href="index.html" class="navbar"></a>
-                    <ul class="nav-list">
-                        <li class="nav-item">
-                            <a href="index.html" class="nav-link">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="proyectos.html" class="nav-link">Proyectos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="habilidades.html" class="nav-link">Habilidades</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Contacto</a>
-                        </li>
-                        <li>
-									<a href="#" class="nav-link navbuscar"></a>                        
-                        </li>
-                    </ul>
-                    <div class="hamburger">
-                        <span class="line"></span>
-                        <span class="line"></span>
-                        <span class="line"></span>
-                    </div>
-                </nav>
-            </div>
+            <ul class="lista">
+                <a href="index.html" class="item-logo"></a>
+                <li class="lista-item">
+                    <a href="index.html">Inicio</a>
+                </li>
+                <li class="lista-item">
+                    <a href="proyectos.html">Trabajos</a>
+                </li>
+                <li class="lista-item">
+                    <a href="habilidades.html">Habilidades</a>
+                </li>
+                <li class="lista-item">
+                    <a href="#">Contacto</a>
+                </li>
+                <div class="hamburger">
+                    <span class="line"></span>
+                    <span class="line"></span>
+                    <span class="line"></span>
+                </div>
+            </ul>
         </header>
-        <div id="particles-js" class="particulas"></div> 
-        <section>
-				       
-        </section>
+        <main>
+            <section>
+
+            </section>
+        </main>
         <script src="main.js"></script>
-        <script src="particles.js"></script>
-        <script src="particles.min.js"></script>
-        <script src="app.js"></script>
+        <footer>
+            <div class="redes-sociales">
+                <a href="https://facebook.com/ltito2/" class="facebook"></a>
+                <a href="https://instagram.com/ltito2/" class="instagram"></a>
+                <a href="https://twitter.com/Luis6823" class="twitter"></a>
+                <a href="https://www.linkedin.com/in/luis-saavedra-30b487207/" class="linkedin"></a>
+            </div>
+        </footer>
     </body>
 </html>
