--- a/proyectos.html
+++ b/proyectos.html
@@ -8,45 +8,67 @@
     </head>
     <body>
         <header>
-            <div class="container">
-                <nav>
-                    <a href="index.html" class="navbar"></a>
-                    <ul class="nav-list">
-                        <li class="nav-item">
-                            <a href="index.html" class="nav-link">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="proyectos.html" class="nav-link">Proyectos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="habilidades.html" class="nav-link">Habilidades</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Contacto</a>
-                        </li>
-                        <li>
-							<a href="#" class="nav-link navbuscar"></a>                        
-                        </li>
-                    </ul>
-                    <div class="hamburger">
-                        <span class="line"></span>
-                        <span class="line"></span>
-                        <span class="line"></span>
-                    </div>
-                </nav>
-            </div>
-        </header>
-        <section>
-			<div class="proyecto">
-                <div class="circulo"></div>
-                <div class="contenido">
-                    <h2>Sistema Control de Asistencia</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse, laborum totam magni cupiditate ipsam dolore adipisci asperiores quia, eveniet qui suscipit voluptatem sunt iste? Inventore nesciunt ea impedit nobis.</p>
-                    <a href="#">Conocer mas...</a>
+            <ul class="lista">
+                <a href="index.html" class="item-logo"></a>
+                <li class="lista-item">
+                    <a href="index.html">Inicio</a>
+                </li>
+                <li class="lista-item">
+                    <a href="proyectos.html">Trabajos</a>
+                </li>
+                <li class="lista-item">
+                    <a href="habilidades.html">Habilidades</a>
+                </li>
+                <li class="lista-item">
+                    <a href="#">Contacto</a>
+                </li>
+                <div class="hamburger">
+                    <span class="line"></span>
+                    <span class="line"></span>
+                    <span class="line"></span>
                 </div>
-                <img src="images/pth.png" alt="articulo">
-            </div>	        
-        </section>
+            </ul>
+        </header>
+        <main>
+            <section>
+                <div class="proyecto">
+                    <div class="circulo"></div>
+                    <div class="contenido">
+                        <h2>Sistema Control de Asistencia</h2>
+                        <p>La falta de control de asistencia al cuerpo de docentes
+                            como del alumnado es uno de los problemas con los que se enfrentan
+                            las instituciones educativas, por ello el objetivo se automitizar el control de asistencia docente/alumnos
+                            mediante geolocalización y un sistema informatico para poder manejar
+                            la información de manera mas optima...
+                        </p>
+                        <a href="#">Conocer mas...</a>
+                    </div>
+                    <img src="images/pth.png" alt="articulo">
+                </div>	        
+                <div class="proyecto">
+                    <div class="circulo"></div>
+                    <div class="contenido">
+                        <h2>Sistema Control de Asistencia</h2>
+                        <p>La falta de control de asistencia al cuerpo de docentes
+                            como del alumnado es uno de los problemas con los que se enfrentan
+                            las instituciones educativas, por ello el objetivo se automitizar el control de asistencia docente/alumnos
+                            mediante geolocalización y un sistema informatico para poder manejar
+                            la información de manera mas optima...
+                        </p>
+                        <a href="#">Conocer mas...</a>
+                    </div>
+                    <img src="images/pth.png" alt="articulo">
+                </div>	        
+            </section>
+        </main>
         <script src="main.js"></script>
+        <footer>
+            <div class="redes-sociales">
+                <a href="https://facebook.com/ltito2/" class="facebook"></a>
+                <a href="https://instagram.com/ltito2/" class="instagram"></a>
+                <a href="https://twitter.com/Luis6823" class="twitter"></a>
+                <a href="https://www.linkedin.com/in/luis-saavedra-30b487207/" class="linkedin"></a>
+            </div>
+        </footer>
     </body>
 </html>
