--- a/public/contacto.html
+++ b/public/contacto.html
@@ -8,7 +8,26 @@
     </head>
     <body>
         <header>
-
+            <ul class="lista">
+                <a href="index.html" class="item-logo"></a>
+                <li class="lista-item">
+                    <a href="index.html">Inicio</a>
+                </li>
+                <li class="lista-item">
+                    <a href="proyectos.html">Trabajos</a>
+                </li>
+                <li class="lista-item">
+                    <a href="habilidades.html">Habilidades</a>
+                </li>
+                <li class="lista-item">
+                    <a href="#">Contacto</a>
+                </li>
+                <div class="hamburger">
+                    <span class="line"></span>
+                    <span class="line"></span>
+                    <span class="line"></span>
+                </div>
+            </ul>
         </header>
         <main>
 
