--- a/public/contacto.html
+++ b/public/contacto.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <meta name="viewport" content="width=device-width, user-scalable=no ,initial-scale=1.0, maximum-scale=1.0,minimum-sacale=1.0">
+        <title>Contacto</title>
+        <link rel="stylesheet" href="style.css">
+        <script data-ad-client="pub-9661846799111855" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
     <body>
         <header>
@@ -20,7 +21,7 @@
                     <a href="habilidades.html">Habilidades</a>
                 </li>
                 <li class="lista-item">
-                    <a href="#">Contacto</a>
+                    <a href="contacto.html">Contacto</a>
                 </li>
                 <div class="hamburger">
                     <span class="line"></span>
@@ -33,7 +34,20 @@
 
         </main>
         <footer>
-            
+            <div class="redes-sociales">
+                <div class="ico">
+                    <a href="https://facebook.com/ltito2/" class="facebook"></a>
+                </div>
+                <div class="ico">
+                    <a href="https://instagram.com/ltito2/" class="instagram"></a>
+                </div>
+                <div class="ico">
+                    <a href="https://twitter.com/Luis6823" class="twitter"></a>
+                </div>
+                <div class="ico">
+                    <a href="https://www.linkedin.com/in/luis-saavedra-30b487207/" class="linkedin"></a>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
