--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no ,initial-scale=1.0, maximum-scale=1.0,minimum-sacale=1.0">
         <title>Inicio</title>
         <link rel="stylesheet" href="style.css">
@@ -20,7 +21,7 @@
                     <a href="habilidades.html">Habilidades</a>
                 </li>
                 <li class="lista-item">
-                    <a href="#">Contacto</a>
+                    <a href="contacto.html">Contacto</a>
                 </li>
                 <div class="hamburger">
                     <span class="line"></span>
@@ -37,10 +38,18 @@
         <script src="main.js"></script>
         <footer>
             <div class="redes-sociales">
-                <a href="https://facebook.com/ltito2/" class="facebook"></a>
-                <a href="https://instagram.com/ltito2/" class="instagram"></a>
-                <a href="https://twitter.com/Luis6823" class="twitter"></a>
-                <a href="https://www.linkedin.com/in/luis-saavedra-30b487207/" class="linkedin"></a>
+                <div class="ico">
+                    <a href="https://facebook.com/ltito2/" class="facebook"></a>
+                </div>
+                <div class="ico">
+                    <a href="https://instagram.com/ltito2/" class="instagram"></a>
+                </div>
+                <div class="ico">
+                    <a href="https://twitter.com/Luis6823" class="twitter"></a>
+                </div>
+                <div class="ico">
+                    <a href="https://www.linkedin.com/in/luis-saavedra-30b487207/" class="linkedin"></a>
+                </div>
             </div>
         </footer>
     </body>
