--- a/public/proyectos.html
+++ b/public/proyectos.html
@@ -20,7 +20,7 @@
                     <a href="habilidades.html">Habilidades</a>
                 </li>
                 <li class="lista-item">
-                    <a href="#">Contacto</a>
+                    <a href="contacto.html">Contacto</a>
                 </li>
                 <div class="hamburger">
                     <span class="line"></span>
@@ -64,10 +64,18 @@
         <script src="main.js"></script>
         <footer>
             <div class="redes-sociales">
-                <a href="https://facebook.com/ltito2/" class="facebook"></a>
-                <a href="https://instagram.com/ltito2/" class="instagram"></a>
-                <a href="https://twitter.com/Luis6823" class="twitter"></a>
-                <a href="https://www.linkedin.com/in/luis-saavedra-30b487207/" class="linkedin"></a>
+                <div class="ico">
+                    <a href="https://facebook.com/ltito2/" class="facebook"></a>
+                </div>
+                <div class="ico">
+                    <a href="https://instagram.com/ltito2/" class="instagram"></a>
+                </div>
+                <div class="ico">
+                    <a href="https://twitter.com/Luis6823" class="twitter"></a>
+                </div>
+                <div class="ico">
+                    <a href="https://www.linkedin.com/in/luis-saavedra-30b487207/" class="linkedin"></a>
+                </div>
             </div>
         </footer>
     </body>
