--- a/public/index.html
+++ b/public/index.html
@@ -39,16 +39,16 @@
         <footer>
             <div class="redes-sociales">
                 <div class="ico">
-                    <a href="https://facebook.com/ltito2/" class="facebook"></a>
+                    <a href="https://facebook.com/ltito2/" class="facebook" target="_BLANK"></a>
                 </div>
                 <div class="ico">
-                    <a href="https://instagram.com/ltito2/" class="instagram"></a>
+                    <a href="https://instagram.com/ltito2/" class="instagram" target="_BLANK"></a>
                 </div>
                 <div class="ico">
-                    <a href="https://twitter.com/Luis6823" class="twitter"></a>
+                    <a href="https://twitter.com/Luis6823" class="twitter" target="_BLANK"></a>
                 </div>
                 <div class="ico">
-                    <a href="https://www.linkedin.com/in/luis-saavedra-30b487207/" class="linkedin"></a>
+                    <a href="https://www.linkedin.com/in/luis-saavedra-30b487207/" class="linkedin" target="_BLANK"></a>
                 </div>
             </div>
         </footer>
