--- a/public/habilidades.html
+++ b/public/habilidades.html
@@ -34,7 +34,7 @@
                 <div class="lenguajes">
                     <div class="box">
                         <h2 class="name">HTML</h2>
-                        <a href="https://en.wikipedia.org/wiki/HTML" class="visit">Visitar</a>
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" class="visit" target="_BLANK">Visitar</a>
                         <div class="circle"></div>
                         <img src="images/html.png" class="lenguaje">
                     </div>
@@ -81,13 +81,19 @@
                         <img src="images/ionic.png" class="lenguaje">
                     </div>
                     <div class="box">
-                        <h2 class="name">IBM WATSON</h2>
+                        <h2 class="name">MYSQL</h2>
                         <a href="#" class="visit">Visitar</a>
                         <div class="circle"></div>
                         <img src="images/ionic.png" class="lenguaje">
                     </div>
                     <div class="box">
-                        <h2 class="name">MYSQL</h2>
+                        <h2 class="name">PHOTOSHOP</h2>
+                        <a href="#" class="visit">Visitar</a>
+                        <div class="circle"></div>
+                        <img src="images/ionic.png" class="lenguaje">
+                    </div>
+                    <div class="box">
+                        <h2 class="name">ILLUSTRATOR</h2>
                         <a href="#" class="visit">Visitar</a>
                         <div class="circle"></div>
                         <img src="images/ionic.png" class="lenguaje">
@@ -108,16 +114,16 @@
         <footer>
             <div class="redes-sociales">
                 <div class="ico">
-                    <a href="https://facebook.com/ltito2/" class="facebook"></a>
+                    <a href="https://facebook.com/ltito2/" class="facebook" target="_BLANK"></a>
                 </div>
                 <div class="ico">
-                    <a href="https://instagram.com/ltito2/" class="instagram"></a>
+                    <a href="https://instagram.com/ltito2/" class="instagram" target="_BLANK"></a>
                 </div>
                 <div class="ico">
-                    <a href="https://twitter.com/Luis6823" class="twitter"></a>
+                    <a href="https://twitter.com/Luis6823" class="twitter" target="_BLANK"></a>
                 </div>
                 <div class="ico">
-                    <a href="https://www.linkedin.com/in/luis-saavedra-30b487207/" class="linkedin"></a>
+                    <a href="https://www.linkedin.com/in/luis-saavedra-30b487207/" class="linkedin" target="_BLANK"></a>
                 </div>
             </div>
         </footer>
