--- a/public/proyectos.html
+++ b/public/proyectos.html
@@ -32,32 +32,68 @@
         <main>
             <section>
                 <div class="proyecto">
-                    <div class="circulo"></div>
-                    <div class="contenido">
-                        <h2>Sistema Control de Asistencia</h2>
-                        <p>La falta de control de asistencia al cuerpo de docentes
-                            como del alumnado es uno de los problemas con los que se enfrentan
-                            las instituciones educativas, por ello el objetivo se automitizar el control de asistencia docente/alumnos
-                            mediante geolocalización y un sistema informatico para poder manejar
-                            la información de manera mas optima...
-                        </p>
-                        <a href="#">Conocer mas...</a>
+                    <div class="box">
+                        <div class="circulo"></div>
+                        <div class="contenido">
+                            <h2>Sistema Control de Asistencia</h2>
+                            <p>La falta de control de asistencia al cuerpo de docentes
+                                como del alumnado es uno de los problemas con los que se enfrentan
+                                las instituciones educativas...
+                            <a href="https://github.com/ltito2/Sistema_control_Asistencia" target="_BLANK">Conocer mas...</a>
+                        </div>
+                        <img src="images/logo_app.png" alt="articulo">
                     </div>
-                    <img src="images/logo_app.png" alt="articulo">
-                </div>	        
-                <div class="proyecto">
-                    <div class="circulo"></div>
-                    <div class="contenido">
-                        <h2>Sistema Control de Asistencia</h2>
-                        <p>La falta de control de asistencia al cuerpo de docentes
-                            como del alumnado es uno de los problemas con los que se enfrentan
-                            las instituciones educativas, por ello el objetivo se automitizar el control de asistencia docente/alumnos
-                            mediante geolocalización y un sistema informatico para poder manejar
-                            la información de manera mas optima...
-                        </p>
-                        <a href="#">Conocer mas...</a>
+                    <div class="box">
+                        <div class="circulo"></div>
+                        <div class="contenido">
+                            <h2>Tone Analyzer-5i</h2>
+                            <p>Analiza el tono del contenido de las estradas. Se muestran ejemplos del punto final de finalidad
+                                general y del punto final de fidelizacion del cliente.
+                            </p>
+                            <a href="https://cloud.ibm.com/services/tone-analyzer/crn%3Av1%3Abluemix%3Apublic%3Atone-analyzer%3Aus-south%3Aa%2F7b2a9cfd633e4cf6ba554ec8f7973655%3Ac6ecdab6-ccb8-4090-a159-846852418577%3A%3A?paneId=manage" target="_BLANK">Conocer mas...</a>
+                        </div>
+                        <img src="images/ibmtone-analyzer.png" alt="articulo">
                     </div>
-                    <img src="images/logo_app.png" alt="articulo">
+                    <div class="box">
+                        <div class="circulo"></div>
+                        <div class="contenido">
+                            <h2>Text to Speech-80</h2>
+                            <p>Convierte el texto escrito en una voz que suena natural para proporcionar funciones de síntesis de voz para aplicaciones.
+                            </p>
+                            <a href="https://cloud.ibm.com/services/tone-analyzer/crn%3Av1%3Abluemix%3Apublic%3Atone-analyzer%3Aus-south%3Aa%2F7b2a9cfd633e4cf6ba554ec8f7973655%3Ac6ecdab6-ccb8-4090-a159-846852418577%3A%3A?paneId=manage" target="_BLANK">Conocer mas...</a>
+                        </div>
+                        <img src="images/ibmtext-speech.png" alt="articulo">
+                    </div>
+                    <div class="box">
+                        <div class="circulo"></div>
+                        <div class="contenido">
+                            <h2>Speech to Text-7p</h2>
+                            <p>Transcribe audio a texto para habilitar las prstaciones de transcripción de voz para aplicaciones.
+                            </p>
+                            <a href="https://cloud.ibm.com/services/tone-analyzer/crn%3Av1%3Abluemix%3Apublic%3Atone-analyzer%3Aus-south%3Aa%2F7b2a9cfd633e4cf6ba554ec8f7973655%3Ac6ecdab6-ccb8-4090-a159-846852418577%3A%3A?paneId=manage" target="_BLANK">Conocer mas...</a>
+                        </div>
+                        <img src="images/ibmspeech-text.png" alt="articulo">
+                    </div>
+                    <div class="box">
+                        <div class="circulo"></div>
+                        <div class="contenido">
+                            <h2>Language Translator-3j</h2>
+                            <p>Muestra los mandatos traducir texto de un idioma a otro e identificar el idioma de un texto.
+                            </p>
+                            <a href="https://cloud.ibm.com/services/tone-analyzer/crn%3Av1%3Abluemix%3Apublic%3Atone-analyzer%3Aus-south%3Aa%2F7b2a9cfd633e4cf6ba554ec8f7973655%3Ac6ecdab6-ccb8-4090-a159-846852418577%3A%3A?paneId=manage" target="_BLANK">Conocer mas...</a>
+                        </div>
+                        <img src="images/ibmtranslator.png" alt="articulo">
+                    </div>
+                    <div class="box">
+                        <div class="circulo"></div>
+                        <div class="contenido">
+                            <h2>watsonMachineLearnig</h2>
+                            <p>Integrar prestaciones predictivas con sus aplicaciones. El servicio es REST para tus aplicaciones.
+                            </p>
+                            <a href="https://cloud.ibm.com/services/tone-analyzer/crn%3Av1%3Abluemix%3Apublic%3Atone-analyzer%3Aus-south%3Aa%2F7b2a9cfd633e4cf6ba554ec8f7973655%3Ac6ecdab6-ccb8-4090-a159-846852418577%3A%3A?paneId=manage" target="_BLANK">Conocer mas...</a>
+                        </div>
+                        <img src="images/ibmlearnig.png" alt="articulo">
+                    </div>
                 </div>	        
             </section>
         </main>
