--- a/public/proyectos.html
+++ b/public/proyectos.html
@@ -41,7 +41,7 @@
                                 las instituciones educativas...
                             <a href="https://github.com/ltito2/Sistema_control_Asistencia" target="_BLANK">Conocer mas...</a>
                         </div>
-                        <img src="images/logo_app.png" alt="articulo">
+                        <img src="images/logo-app.png" alt="UPS">
                     </div>
                     <div class="box">
                         <div class="circulo"></div>
@@ -50,9 +50,9 @@
                             <p>Analiza el tono del contenido de las estradas. Se muestran ejemplos del punto final de finalidad
                                 general y del punto final de fidelizacion del cliente.
                             </p>
-                            <a href="https://cloud.ibm.com/services/tone-analyzer/crn%3Av1%3Abluemix%3Apublic%3Atone-analyzer%3Aus-south%3Aa%2F7b2a9cfd633e4cf6ba554ec8f7973655%3Ac6ecdab6-ccb8-4090-a159-846852418577%3A%3A?paneId=manage" target="_BLANK">Conocer mas...</a>
+                            <a href="https://cloud.ibm.com/catalog/services/tone-analyzer" target="_BLANK">Conocer mas...</a>
                         </div>
-                        <img src="images/ibmtone-analyzer.png" alt="articulo">
+                        <img src="images/ibmtone-analyzer.png" alt="analyzer">
                     </div>
                     <div class="box">
                         <div class="circulo"></div>
@@ -60,9 +60,9 @@
                             <h2>Text to Speech-80</h2>
                             <p>Convierte el texto escrito en una voz que suena natural para proporcionar funciones de síntesis de voz para aplicaciones.
                             </p>
-                            <a href="https://cloud.ibm.com/services/tone-analyzer/crn%3Av1%3Abluemix%3Apublic%3Atone-analyzer%3Aus-south%3Aa%2F7b2a9cfd633e4cf6ba554ec8f7973655%3Ac6ecdab6-ccb8-4090-a159-846852418577%3A%3A?paneId=manage" target="_BLANK">Conocer mas...</a>
+                            <a href="https://cloud.ibm.com/catalog/services/text-to-speech" target="_BLANK">Conocer mas...</a>
                         </div>
-                        <img src="images/ibmtext-speech.png" alt="articulo">
+                        <img src="images/ibmtext-speech.png" alt="text speech">
                     </div>
                     <div class="box">
                         <div class="circulo"></div>
@@ -70,9 +70,9 @@
                             <h2>Speech to Text-7p</h2>
                             <p>Transcribe audio a texto para habilitar las prstaciones de transcripción de voz para aplicaciones.
                             </p>
-                            <a href="https://cloud.ibm.com/services/tone-analyzer/crn%3Av1%3Abluemix%3Apublic%3Atone-analyzer%3Aus-south%3Aa%2F7b2a9cfd633e4cf6ba554ec8f7973655%3Ac6ecdab6-ccb8-4090-a159-846852418577%3A%3A?paneId=manage" target="_BLANK">Conocer mas...</a>
+                            <a href="https://cloud.ibm.com/catalog/services/speech-to-text" target="_BLANK">Conocer mas...</a>
                         </div>
-                        <img src="images/ibmspeech-text.png" alt="articulo">
+                        <img src="images/ibmspeech-text.png" alt="speech text">
                     </div>
                     <div class="box">
                         <div class="circulo"></div>
@@ -80,9 +80,9 @@
                             <h2>Language Translator-3j</h2>
                             <p>Muestra los mandatos traducir texto de un idioma a otro e identificar el idioma de un texto.
                             </p>
-                            <a href="https://cloud.ibm.com/services/tone-analyzer/crn%3Av1%3Abluemix%3Apublic%3Atone-analyzer%3Aus-south%3Aa%2F7b2a9cfd633e4cf6ba554ec8f7973655%3Ac6ecdab6-ccb8-4090-a159-846852418577%3A%3A?paneId=manage" target="_BLANK">Conocer mas...</a>
+                            <a href="https://cloud.ibm.com/catalog/services/language-translator" target="_BLANK">Conocer mas...</a>
                         </div>
-                        <img src="images/ibmtranslator.png" alt="articulo">
+                        <img src="images/ibmtranslator.png" alt="translator">
                     </div>
                     <div class="box">
                         <div class="circulo"></div>
@@ -90,9 +90,9 @@
                             <h2>watsonMachineLearnig</h2>
                             <p>Integrar prestaciones predictivas con sus aplicaciones. El servicio es REST para tus aplicaciones.
                             </p>
-                            <a href="https://cloud.ibm.com/services/tone-analyzer/crn%3Av1%3Abluemix%3Apublic%3Atone-analyzer%3Aus-south%3Aa%2F7b2a9cfd633e4cf6ba554ec8f7973655%3Ac6ecdab6-ccb8-4090-a159-846852418577%3A%3A?paneId=manage" target="_BLANK">Conocer mas...</a>
+                            <a href="https://cloud.ibm.com/catalog/services/machine-learning" target="_BLANK">Conocer mas...</a>
                         </div>
-                        <img src="images/ibmlearnig.png" alt="articulo">
+                        <img src="images/ibmlearning.png" alt="learning">
                     </div>
                 </div>	        
             </section>
