--- a/public/habilidades.html
+++ b/public/habilidades.html
@@ -47,55 +47,55 @@
                     <div class="box">
                         <h2 class="name">JAVASCRIPT</h2>
                         <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" class="visit" target="_BLANK">Visitar</a>
-                        <div class="circle"></div>
+                        <div class="circle">JAVASCRIPT</div>
                         <img src="images/js.svg" class="lenguaje">
                     </div>
                     <div class="box">
                         <h2 class="name">JAVA</h2>
                         <a href="https://developer.mozilla.org/en-US/docs/Glossary/Java" class="visit" target="_BLANK">Visitar</a>
-                        <div class="circle"></div>
+                        <div class="circle">JAVA</div>
                         <img src="images/j.svg" class="lenguaje">
                     </div>
                     <div class="box">
                         <h2 class="name">PYTHON</h2>
                         <a href="https://www.python.org/" class="visit" target="_BLANK">Visitar</a>
-                        <div class="circle"></div>
+                        <div class="circle">PYTHON</div>
                         <img src="images/pth.svg" class="lenguaje">
                     </div>
                     <div class="box">
                         <h2 class="name">ANGULAR</h2>
                         <a href="https://angular.io/" class="visit" taget="_BLANK">Visitar</a>
-                        <div class="circle"></div>
+                        <div class="circle">ANGULAR</div>
                         <img src="images/ang.svg" class="lenguaje">
                     </div>
                     <div class="box">
                         <h2 class="name">IONIC</h2>
                         <a href="https://ionicframework.com/" class="visit" target="_BLANK">Visitar</a>
-                        <div class="circle"></div>
+                        <div class="circle">IONIC</div>
                         <img src="images/ionic.svg" class="lenguaje">
                     </div>
                     <div class="box">
                         <h2 class="name">ORACLE</h2>
                         <a href="https://www.oracle.com/database/technologies/manageability.html" class="visit" target="_BLANK">Visitar</a>
-                        <div class="circle"></div>
+                        <div class="circle">ORACLE</div>
                         <img src="images/oracle.svg" class="lenguaje">
                     </div>
                     <div class="box">
                         <h2 class="name">MYSQL</h2>
                         <a href="https://dev.mysql.com/doc/" class="visit" target="_BLANK">Visitar</a>
-                        <div class="circle"></div>
+                        <div class="circle">MYSQL</div>
                         <img src="images/msql.svg" class="lenguaje">
                     </div>
                     <div class="box">
                         <h2 class="name">PHOTOSHOP</h2>
                         <a href="https://www.adobe.com/products/photoshopfamily.html#" class="visit" target="_BLANK">Visitar</a>
-                        <div class="circle"></div>
+                        <div class="circle">PHOTOSHOP</div>
                         <img src="images/p.svg" class="lenguaje">
                     </div>
                     <div class="box">
                         <h2 class="name">ILLUSTRATOR</h2>
                         <a href="https://www.adobe.com/products/illustrator.html#" class="visit"  target="_BLANK">Visitar</a>
-                        <div class="circle"></div>
+                        <div class="circle">ILLUSTRATOR</div>
                         <img src="images/i.svg" class="lenguaje">
                     </div>
                 </div>
